# nccpy

./: manage.py  pyproject.toml  render.yaml
certexam/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
certexam/migrations/: 0001_initial.py  0002_cadet_school.py  0003_cadet_gender.py  0004_auto_20210625_0555.py  0005_school_wing.py  0006_auto_20210625_0644.py  0007_emailrecord.py  0008_auto_20210625_2224.py  0009_examschedule_mail_sent.py  0010_auto_20210626_1137.py  0011_cadet_standard.py  0012_emailrecord_batch.py  0013_auto_20210629_0634.py  0014_rename_from_to_emailrecord_time_to.py  0015_cadet_appeared.py  0016_battalion_wing.py  0017_cadet_appeared_date.py  0018_auto_20210701_2312.py  0019_compliedscore.py  0020_alter_compliedscore_school.py  0021_alter_compliedscore_options.py
nccpy/: asgi.py  settings.py  urls.py  wsgi.py
online_exam/: admin.py  models.py  urls.py  views.py
online_exam/migrations/: 0001_initial.py  0002_auto_20210626_1736.py  0003_auto_20210626_1815.py  0004_auto_20210626_2336.py  0005_auto_20210627_0919.py  0006_auto_20210629_1852.py  0007_studentscore_user.py  0008_studentscore_subject.py  0009_examschema_pass_percentage.py  0010_alter_examschema_pass_percentage.py  0011_auto_20210702_1739.py  0012_samplequestion.py  0013_examschemasample.py  0014_auto_20210703_0754.py  0015_delete_compliedscore.py  0016_auto_20220330_2104.py
templates/certexam/: 404.html  add_cadet_rowlist.html  add_cadets.html  add_school.html  banner.html  base.html  cadet_list.html  cadet_update_form.html  composite_result.html  exam_batch.html  (+14 more)
(+14 files in other folders)
